# event_server

./: .gitignore  .manager_config.toml  Cargo.toml  README.md
event_list/: Cargo.toml
event_list/src/: lib.rs
event_list/src/lists/: google.rs  mod.rs  remoteical.rs
server/: Cargo.toml
server/src/: config.rs  event_manager.rs  main.rs  tray_icon.rs
viewer/: index.html
