[package]
name = "event_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
chrono = { version = "0.4.23", features = ["serde"] }
google-calendar = "0.3.1"
hyper = "0.14.23"
ical = "0.7.0"
log = "0.4.17"
once_cell = "1.16.0"
open = "3.0.3"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
stringreader = "0.1.1"
tokio = "1.21.2"
