[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
chrono = "0.4.23"
event_list = { version = "0.1.0", path = "../event_list" }
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["server"] }
log = "0.4.17"
open = "3.0.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
trayicon = "0.1.3"
winapi = "0.3.9"
